# cleathlete

./: README.md  pyproject.toml  requirements.txt
data/csv/: allowed_class.csv  always_green.csv  always_red.csv  ask_period.csv  ask_period_and_route.csv  ask_period_and_urine_caution.csv  ask_route_and_dose.csv  classes_map.csv  exemptions.csv  product_compositions.csv  prohibited_list.csv  rules_substances.csv  s9_route.csv  sections .csv  sections.csv  sports_rules.csv  subsections.csv  substances_cache_log.csv  white_list.csv
data/processed/: prohibited_2025.json  prohibited_2025.yaml
demo/: streamlit_app.py
scripts/: convert_wada.py  judge.py  judge_legacy.py
src/cleathlete/: converter.py
src/cleathlete.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_converter_completeness.py
